test/parser/Queries/syntax_errors/fail_K-ForExprWithout-43.xq
(:******************** for ****foo************** ne **************:
(foo:  K-ForExprWithout-43           eq               eq foo     :)
(: Writtenby: Frans Englich      eq                for        :)
(:  foo2006-10-05T18:29:37+02:00             eq        eq      :)
(: Purpose:Variable which is ne  notin let  scope. let               :)
 eq (************************ eq ********foo** $ *******************:) $ 
for $ain (1,  for 2) return eq   $a